fixed font size on mobile, limited max number of posts to 1 on screen sizes smaller than 1533px

--- a/_sass/selection.sass
+++ b/_sass/selection.sass
@@ -76,6 +76,21 @@
 	opacity: 0.8
 	padding: 0
 
+// .limit-1
+// 	display: block
+// .limit-3
+// 	display: block
+
+@media (max-width: 1533px)
+	.limit-3
+		display: none
+@media (min-width: 1533px)
+	.limit-1
+		display: none
+@media (max-width: 1200px)
+	.selection-box
+		h2
+			font-size: 6rem
 	/*---------------*/
 /***** Lily *****/
 /*---------------*/
